# PAU-YM

01.imread_imshowcpp/: CMakeLists.txt  main.cpp
12. cpp_giris/: main.cpp
13_inputAlma/: main.cpp
14-if-else/: main.cpp
15-aritmetik-operatorler/: main.cpp
16-donguler/: break_continue.cpp  do_while.cpp  example.cpp  for.cpp  homework.cpp  main.cpp
1_Face_Anonymizer/: main.py
2_Hand_Tracking/: hand_tracking.py
3_finger_counting/: finger_counting.py
4_Pose_Estimation/: 3_Pose_Estimation.py
5_Personal_Trainer/: personal_trainer.py
6__Face_Detection/: face_detection.py
7_Face_Mesh/: face_mesh.py
8_Parking_Space_Counter/: parking_space_counter.py  parking_space_picker.py
9_Road_Line_Detection/: main.py
